--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
    <header class="header" id="header">
       <nav class="nav container">
          <a href="" class="nav__logo">Travel</a>
-         <div class="nav__menu" id="nav-menu">
+         <div class="nav__menu show-menu" id="nav-menu"> <!--Just Inserted Show-menu-->
             <ul class="nav__list">
                <li class="nav__item"><a href="#home" class="nav__link active-link">Home</a></li>
                <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
@@ -37,7 +37,7 @@
             </div>
          </div>
          <!-- Toggle button -->
-         <div class="nav__toggle" id="nav-toggle">
+         <div class="nav__toggle " id="nav-toggle">
             <i class="ri-menu-fill"></i>
          </div>
       </nav>
@@ -321,7 +321,7 @@
       <a href="#" class="scrollup" id="scroll-up"><i class="ri-arrow-up-line"></i></a>
 
    <!--=============== SCROLLREVEAL ===============-->
-   <script src=""></script>
+   <script src="Js/scrollreveal.min.js"></script>
 
    <!--=============== MAIN JS ===============-->
    <script src="Js/main.js"></script>
